Fix student work layout and add cover stylings

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: MAC Yearbook 2020-21
+title: Revival
 description: >- # this means to ignore newlines until "baseurl:"
-  Mackenzie's 2020-21 Yearbook
+  Mackenzie's 2020-2021 Yearbook
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
