Add layouts for each type of page

--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,14 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 defaults:
   - scope:
       path: ""
+      type: "events"
     values:
-      layout: default
+      layout: event
+  - scope:
+      path: ""
+      type: "clubs"
+    values:
+      layout: club
 
 collections_dir: /pages/
 
