Change Academics to Student Life

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ defaults:
 collections_dir: /pages/
 
 collections:
-  academics:
+  student-life:
     output: true
     permalink: /:collection/:name/
   clubs:
